infrastructure/kubernetes/gcp/authentication-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-db
  template:
    metadata:
      labels:
        app: authentication-db
    spec:
      containers:
        - name: authentication-db
          image: heyimjustalex/authentication-db
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "200m"
              memory: "300Mi"
            requests:
              cpu: "200m"
              memory: "300Mi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops

      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-db-svc
spec:
  selector:
    app: authentication-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
