infrastructure/kubernetes/gcp/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: heyimjustalex/frontend
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "200m"
              memory: "200Mi"
      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
