infrastructure/kubernetes/gcp/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-ms-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-ms
  template:
    metadata:
      labels:
        app: gateway-ms
    spec:
      containers:
        - name: gateway-ms
          image: heyimjustalex/gateway-ms
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "150m"
              memory: "120Mi"
            requests:
              cpu: "150m"
              memory: "120Mi"
      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-ms-svc
spec:
  selector:
    app: gateway-ms
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
