infrastructure/kubernetes/gcp/message-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-broker-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-broker
  template:
    metadata:
      labels:
        app: message-broker
    spec:
      containers:
        - name: message-broker
          image: confluentinc/cp-kafka:7.3.2
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 19092
              name: kafka-internal
            - containerPort: 9999
              name: jmx
          resources:
            limits:
              cpu: "400m"
              memory: "500Mi"
            requests:
              cpu: "400m"
              memory: "500Mi"
      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops

---
apiVersion: v1
kind: Service
metadata:
  name: message-broker-svc
spec:
  selector:
    app: message-broker
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: kafka-internal
      port: 29092
      targetPort: 29092
    - name: jmx
      port: 9999
      targetPort: 9999
