infrastructure/kubernetes/gcp/products-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-db-dep
spec:
  serviceName: products-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
        - name: products-db
          image: heyimjustalex/products-db
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "250m"
              memory: "350Mi"
            requests:
              cpu: "250m"
              memory: "350Mi"
      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops
---
apiVersion: v1
kind: Service
metadata:
  name: products-db-svc
spec:
  selector:
    app: products-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
