infrastructure/kubernetes/gcp/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-ms-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-ms
  template:
    metadata:
      labels:
        app: products-ms
    spec:
      restartPolicy: Always
      containers:
        - name: products-ms
          image: heyimjustalex/products-ms
          livenessProbe:
            httpGet:
              path: /api/products_health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
      tolerations:
        - key: instance_type
          value: spot
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - devops
---
apiVersion: v1
kind: Service
metadata:
  name: products-ms-svc
spec:
  selector:
    app: products-ms
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
